[SBE] Release storage engine resources when saveState() or restoreState() throws

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.2.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Query Execution
    • Fully Compatible
    • ALL
    • v8.1
    • Hide

      As far as I know, this bug is not easily reproducible.

      BF-36692 links to an Evergreen run with a core dump that shows an example of the failure happening.

      Show
      As far as I know, this bug is not easily reproducible. BF-36692 links to an Evergreen run with a core dump that shows an example of the failure happening.
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When CollectionRef::restoreCollection() throws, it leaves '_collPtr' in an initialized state, which is wrong. To keep the CollectionRef in a consistent state, the correct behavior in the event of an exception should be to leave '_collPtr' in an uninitialized state.

      Same goes for CollectionRef::acquireCollection().

      The goal of this task is to fix CollectionRef::restoreCollection() and CollectionRef::acquireCollection() accordingly.

            Assignee:
            Drew Paroski (Inactive)
            Reporter:
            Drew Paroski (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: