SERVER-101591 [SBE] Release storage engine resources when saveState() or restoreState() throws (#32975)

GitOrigin-RevId: 31dee9477375d51357e80cf49d407dae6be06375