src/mongo/db/exec/sbe/stages/collection_helpers.cpp
@@ -42,12 +42,12 @@
 
 namespace mongo::sbe {
 
-void CollectionRef::getConsistentCollection(OperationContext* opCtx,
-                                            const DatabaseName& dbName,
-                                            const UUID& collUuid) {
+CollectionPtr CollectionRef::getConsistentCollection(OperationContext* opCtx,
+                                                     const DatabaseName& dbName,
+                                                     const UUID& collUuid) {
     auto timestamp = shard_role_details::getRecoveryUnit(opCtx)->getPointInTimeReadTimestamp();
-    _collPtr.emplace(CollectionCatalog::get(opCtx)->establishConsistentCollection(
-        opCtx, NamespaceStringOrUUID{dbName, collUuid}, timestamp));
+    return CollectionPtr{CollectionCatalog::get(opCtx)->establishConsistentCollection(
+        opCtx, NamespaceStringOrUUID{dbName, collUuid}, timestamp)};
 }
 
 void CollectionRef::acquireCollection(OperationContext* opCtx,
@@ -60,13 +60,16 @@ void CollectionRef::acquireCollection(OperationContext* opCtx,
     if (!isAcquisition()) {
         tassert(
             9367600, "'_coll' should not be initialized prior to 'acquireCollection()'", !(*this));
-        getConsistentCollection(opCtx, dbName, collUuid);
-        tassert(5071000,
-                str::stream() << "Collection uuid " << collUuid << " does not exist",
-                getPtr());
+        CollectionPtr collPtr = getConsistentCollection(opCtx, dbName, collUuid);
 
-        _collName = getPtr()->ns();
+        // Perform any work that might throw before updating '_collPtr', because in the event an
+        // exception is thrown we don't want '_collPtr' to be holding a CollectionPtr.
+        tassert(
+            5071000, str::stream() << "Collection uuid " << collUuid << " does not exist", collPtr);
+
+        _collName = collPtr->ns();
         _catalogEpoch = CollectionCatalog::get(opCtx)->getEpoch();
+        _collPtr.emplace(std::move(collPtr));
     }
 }
 
@@ -81,18 +84,23 @@ void CollectionRef::restoreCollection(OperationContext* opCtx,
     // collection has been renamed, then the resulting collection object should have a different
     // name from the original '_collName'. In either scenario, we throw a 'QueryPlanKilled' error
     // and terminate the query.
-    getConsistentCollection(opCtx, dbName, collUuid);
-    if (!getPtr()) {
+    CollectionPtr collPtr = getConsistentCollection(opCtx, dbName, collUuid);
+
+    // Perform any work that might throw before updating '_collPtr', because in the event an
+    // exception is thrown we don't want '_collPtr' to be holding a CollectionPtr.
+    if (!collPtr) {
         PlanYieldPolicy::throwCollectionDroppedError(collUuid);
     }
 
-    if (*_collName != getPtr()->ns()) {
-        PlanYieldPolicy::throwCollectionRenamedError(*_collName, getPtr()->ns(), collUuid);
+    if (*_collName != collPtr->ns()) {
+        PlanYieldPolicy::throwCollectionRenamedError(*_collName, collPtr->ns(), collUuid);
     }
 
     uassert(ErrorCodes::QueryPlanKilled,
             "the catalog was closed and reopened",
             CollectionCatalog::get(opCtx)->getEpoch() == *_catalogEpoch);
+
+    _collPtr.emplace(std::move(collPtr));
 }
 
 }  // namespace mongo::sbe
