src/mongo/db/exec/sbe/stages/stages.h
@@ -175,6 +175,25 @@ public:
     }
 
     /**
+     * If saveState() or restoreState() throw an exception, this method is automatically invoked
+     * to perform any cleanup that may be necessary.
+     *
+     * discardState() leaves the PlanStage tree in a state where execution cannot continue, so it
+     * should only be called in cases where there is no intent to continue executing (like when an
+     * exception has been thrown).
+     */
+    void discardState() {
+        auto stage = static_cast<T*>(this);
+
+        stage->doDiscardState();
+
+        auto& children = stage->_children;
+        for (auto& child : children) {
+            child->discardState();
+        }
+    }
+
+    /**
      * Notifies the stage that the underlying data source may change.
      *
      * It is illegal to call work() or isEOF() when a stage is in the "saved" state. May be called
@@ -192,6 +211,14 @@ public:
      * TODO SERVER-59620: Remove the 'relinquishCursor' parameter once all callers pass 'false'.
      */
     void saveState(bool relinquishCursor, bool disableSlotAccess = false) {
+        // If there's an exception, call discardState() to perform any cleanup that is needed.
+        bool finished = false;
+        ON_BLOCK_EXIT([&]() {
+            if (!finished) {
+                discardState();
+            }
+        });
+
         auto stage = static_cast<T*>(this);
         stage->_commonStats.yields++;
 
@@ -211,6 +238,8 @@ public:
 #if defined(MONGO_CONFIG_DEBUG_BUILD)
         _saveState = relinquishCursor ? SaveState::kSavedFull : SaveState::kSavedNotFull;
 #endif
+
+        finished = true;
     }
 
     /**
@@ -229,6 +258,14 @@ public:
      * value for 'relinquishCursor' as was passed in the previous call to saveState().
      */
     void restoreState(bool relinquishCursor) {
+        // If there's an exception, call discardState() to perform any cleanup that is needed.
+        bool finished = false;
+        ON_BLOCK_EXIT([&]() {
+            if (!finished) {
+                discardState();
+            }
+        });
+
         auto stage = static_cast<T*>(this);
         stage->_commonStats.unyields++;
 #if defined(MONGO_CONFIG_DEBUG_BUILD)
@@ -247,6 +284,8 @@ public:
 #if defined(MONGO_CONFIG_DEBUG_BUILD)
         stage->_saveState = SaveState::kNotSaved;
 #endif
+
+        finished = true;
     }
 
 protected:
@@ -804,6 +843,7 @@ protected:
     // Derived classes can optionally override these methods.
     virtual void doSaveState(bool relinquishCursor) {}
     virtual void doRestoreState(bool relinquishCursor) {}
+    virtual void doDiscardState() {}
     virtual void doDetachFromOperationContext() {}
     virtual void doAttachToOperationContext(OperationContext* opCtx) {}
 
